Add enemy service as well

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,12 @@ services:
       - "3001:3001"
     depends_on:
       - "redis"
+  enemy:
+    image: buddbro/hydra-enemy
+    ports:
+      - "3002:3002"
+    depends_on:
+      - "redis"
   redis:
     image: redis:alpine
     ports:
